<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterFirstStepActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/pack_musical_notes_with_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_32dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/step_1"
        android:textColor="@color/gray_200"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_32dp"
        android:layout_marginBottom="@dimen/margin_padding_32dp"
        android:text="@string/register"
        android:textSize="@dimen/font_size_extra_extra_large"
        app:layout_constraintBottom_toTopOf="@+id/tv_full_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_32dp"
        android:layout_marginBottom="@dimen/margin_padding_8dp"
        android:text="@string/full_name"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintBottom_toTopOf="@+id/edt_full_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_full_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/margin_padding_32dp"
        android:layout_marginEnd="@dimen/margin_padding_32dp"
        android:layout_marginBottom="@dimen/margin_padding_16dp"
        android:hint="@string/enter_your_full_name"
        android:inputType="text"
        android:paddingLeft="@dimen/margin_padding_16dp"
        android:paddingRight="@dimen/margin_padding_16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_32dp"
        android:layout_marginEnd="@dimen/margin_padding_32dp"
        android:layout_marginBottom="@dimen/margin_padding_8dp"
        android:text="@string/email"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/margin_padding_32dp"
        android:layout_marginEnd="@dimen/margin_padding_32dp"
        android:layout_marginBottom="@dimen/margin_padding_32dp"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/margin_padding_16dp"
        android:paddingRight="@dimen/margin_padding_16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_32dp"
        android:layout_marginEnd="@dimen/margin_padding_32dp"
        android:layout_marginBottom="@dimen/margin_padding_32dp"
        android:background="@drawable/background_purple_gradient"
        android:stateListAnimator="@null"
        android:text="@string/next"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>